NetBSD Problem Report #48805

From www@NetBSD.org  Tue May 13 12:01:34 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher ECDHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 02B70A5812
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 13 May 2014 12:01:34 +0000 (UTC)
Message-Id: <20140513120132.B1A36A585E@mollari.NetBSD.org>
Date: Tue, 13 May 2014 12:01:32 +0000 (UTC)
From: jun@soum.co.jp
Reply-To: jun@soum.co.jp
To: gnats-bugs@NetBSD.org
Subject: Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay
X-Send-Pr-Version: www-1.0

>Number:         48805
>Category:       port-arm
>Synopsis:       Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    skrll
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue May 13 12:05:00 +0000 2014
>Closed-Date:    Sun Jan 11 13:11:05 +0000 2015
>Last-Modified:  Sun Jan 11 13:11:05 +0000 2015
>Originator:     Jun Ebihara
>Release:        evbarm-earmhf/201405081300Z
>Organization:
SOUM Corporation
>Environment:
NetBSD rpi 6.99.41 NetBSD 6.99.41 (RPI) #0: Thu May  8 14:53:46 UTC 2014
builds@b43.netbsd.org:/home/builds/ab/HEAD/evbarm-earmhf/201405081300Z-obj/home/builds/ab/HEAD/src/sys/arch/evbarm/compile/RPI
evbarm

>Description:
Yunis Mustafa reports on port-arm mailinglist:
Date: Mon, 12 May 2014 14:59:03 -0700

- audioplay hangs and ctl-c has no effect on killing it
- Sometimes the following log is printed out on serial console when this
happens:
    vcaudio0: WARNING: count = 11472

>How-To-Repeat:
1. RPI boot with 
ftp://ftp.netbsd.org/pub/NetBSD/misc/jun/raspberry-pi/2014-05-10-earmhf/2014-05-10-netbsd-raspi.img.gz
2. login root with no password
3. run audioplay.and sometimes hangs with vcaudio0: WARNING: count = XXXX
audioplay /usr/pkg/share/mikutter/core/skin/data/sounds/mikutter-se.wav

http://movapic.com/ebijun/pic/5140170

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-arm-maintainer->skrll
Responsible-Changed-By: skrll@NetBSD.org
Responsible-Changed-When: Tue, 13 May 2014 12:12:53 +0000
Responsible-Changed-Why:
I'm working on fixing this.


From: Jun Ebihara <jun@soum.co.jp>
To: gnats-bugs@NetBSD.org, skrll@NetBSD.org
Cc: port-arm-maintainer@netbsd.org, netbsd-bugs@netbsd.org,
        gnats-admin@netbsd.org
Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD
 (2014-05-10) image - hangs audio applications like audioplay)
Date: Thu, 11 Dec 2014 14:57:37 +0900 (JST)

 From: skrll@NetBSD.org
 Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay)
 Date: Tue, 13 May 2014 12:12:53 +0000 (UTC)

 > Synopsis: Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay
 > 
 > Responsible-Changed-From-To: port-arm-maintainer->skrll
 > Responsible-Changed-By: skrll@NetBSD.org
 > Responsible-Changed-When: Tue, 13 May 2014 12:12:53 +0000
 > Responsible-Changed-Why:
 > I'm working on fixing this.

 On NetBSD-current 7.99.1 evbarm-earmhf 201411142340Z,
 audioplay output works well.
 please close this PR.

From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@NetBSD.org, gnats-admin@netbsd.org, 
 netbsd-bugs@netbsd.org, jun@soum.co.jp
Cc: 
Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD (2014-05-10)
 image - hangs audio applications like audioplay)
Date: Mon, 15 Dec 2014 14:19:05 +0000

 On 12/11/14 06:00, Jun Ebihara wrote:
 > The following reply was made to PR port-arm/48805; it has been noted by GNATS.
 >
 > From: Jun Ebihara <jun@soum.co.jp>
 > To: gnats-bugs@NetBSD.org, skrll@NetBSD.org
 > Cc: port-arm-maintainer@netbsd.org, netbsd-bugs@netbsd.org,
 >          gnats-admin@netbsd.org
 > Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD
 >   (2014-05-10) image - hangs audio applications like audioplay)
 > Date: Thu, 11 Dec 2014 14:57:37 +0900 (JST)
 >
 >   From: skrll@NetBSD.org
 >   Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay)
 >   Date: Tue, 13 May 2014 12:12:53 +0000 (UTC)
 >   
 >   > Synopsis: Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay
 >   >
 >   > Responsible-Changed-From-To: port-arm-maintainer->skrll
 >   > Responsible-Changed-By: skrll@NetBSD.org
 >   > Responsible-Changed-When: Tue, 13 May 2014 12:12:53 +0000
 >   > Responsible-Changed-Why:
 >   > I'm working on fixing this.
 >   
 >   On NetBSD-current 7.99.1 evbarm-earmhf 201411142340Z,
 >   audioplay output works well.
 >   please close this PR.
 >   
 Does this really work for you? Playback stops for me after an extended 
 period of playback, e.g. an hour.

 Nick

From: Jun Ebihara <jun@soum.co.jp>
To: skrll@netbsd.org
Cc: gnats-bugs@NetBSD.org, gnats-admin@netbsd.org, netbsd-bugs@netbsd.org
Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD
 (2014-05-10) image - hangs audio applications like audioplay)
Date: Tue, 16 Dec 2014 14:10:40 +0900 (JST)

 From: Nick Hudson <skrll@netbsd.org>
 Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay)
 Date: Mon, 15 Dec 2014 14:19:05 +0000

 >>   audioplay output works well.
 >>   please close this PR.
 > Does this really work for you? Playback stops for me after an extended
 > period of playback, e.g. an hour.

 an hour!?
 I'll make more loonger play back test again. 

 thanx for notify.

 --
 Jun Ebihara

From: "Nathanial Sloss" <nat@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48805 CVS commit: src/sys/arch/arm/broadcom
Date: Tue, 16 Dec 2014 13:09:33 +0000

 Module Name:	src
 Committed By:	nat
 Date:		Tue Dec 16 13:09:33 UTC 2014

 Modified Files:
 	src/sys/arch/arm/broadcom: bcm2835_tmr.c

 Log Message:
 Clear status of BCM2835_STIMER_M3 only as timer comparison reg 0 and 2
 are used by the VideoCore on Raspberry Pi.  This fixes audio playback.

 Addresses PR 48805.

 This commit was approved by skrll@


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.4 src/sys/arch/arm/broadcom/bcm2835_tmr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: nat@NetBSD.org
State-Changed-When: Tue, 16 Dec 2014 13:24:05 +0000
State-Changed-Why:
With the timer patch audio has played six hours without interruption and still going.
So please retest to be sure and once ok this PR can be closed.


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48805 CVS commit: [netbsd-7] src/sys/arch/arm/broadcom
Date: Wed, 17 Dec 2014 18:47:34 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Dec 17 18:47:34 UTC 2014

 Modified Files:
 	src/sys/arch/arm/broadcom [netbsd-7]: bcm2835_tmr.c

 Log Message:
 Pull up following revision(s) (requested by nat in ticket #333):
 	sys/arch/arm/broadcom/bcm2835_tmr.c: revision 1.4
 Clear status of BCM2835_STIMER_M3 only as timer comparison reg 0 and 2
 are used by the VideoCore on Raspberry Pi.  This fixes audio playback.
 Addresses PR 48805.
 This commit was approved by skrll@


 To generate a diff of this commit:
 cvs rdiff -u -r1.3 -r1.3.12.1 src/sys/arch/arm/broadcom/bcm2835_tmr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48805 CVS commit: [netbsd-6] src/sys/arch/arm/broadcom
Date: Sun, 21 Dec 2014 20:19:21 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Sun Dec 21 20:19:21 UTC 2014

 Modified Files:
 	src/sys/arch/arm/broadcom [netbsd-6]: bcm2835_tmr.c

 Log Message:
 Pull up following revision(s) (requested by nat in ticket #1214):
 	sys/arch/arm/broadcom/bcm2835_tmr.c: revision 1.4
 Clear status of BCM2835_STIMER_M3 only as timer comparison reg 0 and 2
 are used by the VideoCore on Raspberry Pi.  This fixes audio playback.
 Addresses PR 48805.
 This commit was approved by skrll@


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.2.4 -r1.1.2.5 src/sys/arch/arm/broadcom/bcm2835_tmr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48805 CVS commit: [netbsd-6-1] src/sys/arch/arm/broadcom
Date: Sun, 21 Dec 2014 20:21:11 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Sun Dec 21 20:21:10 UTC 2014

 Modified Files:
 	src/sys/arch/arm/broadcom [netbsd-6-1]: bcm2835_tmr.c

 Log Message:
 Pull up following revision(s) (requested by nat in ticket #1214):
 	sys/arch/arm/broadcom/bcm2835_tmr.c: revision 1.4
 Clear status of BCM2835_STIMER_M3 only as timer comparison reg 0 and 2
 are used by the VideoCore on Raspberry Pi.  This fixes audio playback.
 Addresses PR 48805.
 This commit was approved by skrll@


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.2.4 -r1.1.2.4.2.1 src/sys/arch/arm/broadcom/bcm2835_tmr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "SAITOH Masanobu" <msaitoh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48805 CVS commit: [netbsd-6-0] src/sys/arch/arm/broadcom
Date: Sun, 21 Dec 2014 20:21:28 +0000

 Module Name:	src
 Committed By:	msaitoh
 Date:		Sun Dec 21 20:21:28 UTC 2014

 Modified Files:
 	src/sys/arch/arm/broadcom [netbsd-6-0]: bcm2835_tmr.c

 Log Message:
 Pull up following revision(s) (requested by nat in ticket #1214):
 	sys/arch/arm/broadcom/bcm2835_tmr.c: revision 1.4
 Clear status of BCM2835_STIMER_M3 only as timer comparison reg 0 and 2
 are used by the VideoCore on Raspberry Pi.  This fixes audio playback.
 Addresses PR 48805.
 This commit was approved by skrll@


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.2.2 -r1.1.2.2.4.1 src/sys/arch/arm/broadcom/bcm2835_tmr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Jun Ebihara <jun@soum.co.jp>
To: gnats-bugs@NetBSD.org, nat@NetBSD.org
Cc: skrll@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD
 (2014-05-10) image - hangs audio applications like audioplay)
Date: Fri, 09 Jan 2015 09:04:38 +0900 (JST)

 From: nat@NetBSD.org
 Subject: Re: port-arm/48805 (Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay)
 Date: Tue, 16 Dec 2014 13:24:05 +0000 (UTC)

 > Synopsis: Audio Driver issues on Pi running NetBSD (2014-05-10) image - hangs audio applications like audioplay
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: nat@NetBSD.org
 > State-Changed-When: Tue, 16 Dec 2014 13:24:05 +0000
 > State-Changed-Why:
 > With the timer patch audio has played six hours without interruption and still going.
 > So please retest to be sure and once ok this PR can be closed.

 I also checked 24 hours audio play without no interruption.
 Please close this PR!
 many thanx.

State-Changed-From-To: feedback->closed
State-Changed-By: nat@NetBSD.org
State-Changed-When: Sun, 11 Jan 2015 13:11:05 +0000
State-Changed-Why:
Confirmed fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.