Pull up following revision(s) (requested by nat in ticket #1214): 	sys/arch/arm/broadcom/bcm2835_tmr.c: revision 1.4 Clear status of BCM2835_STIMER_M3 only as timer comparison reg 0 and 2 are used by the VideoCore on Raspberry Pi.  This fixes audio playback. Addresses PR 48805. This commit was approved by skrll@